# stanley_cbp

./: .gitignore  ExampleBashScript.sh  License.txt  README.md  bump_version.py  clusterEnvironment.yml  environment.yml  pyproject.toml
Tutorials/: KeplerInjectionTutorial.ipynb  TOI1338Tutorial.ipynb
Tutorials/UserGeneratedData/: manual_cuts_TESS.csv  planet_params.csv  planet_params_TOI1338.csv
docs/: Contributing.md  architecture.md  index.md  installation.md
stanley/: ExampleBashScript.sh  Stanley_Functions.py  __init__.py
stanley/Databases/: ANTIC_Catalogue_12_11_filtered.csv  common_false_positives.csv  exoplanet_archive.csv
stanley/Databases/SpecificTargetCuts/: 10352603_manual_cuts.csv  12217907_manual_cuts.csv  12644769_manual_cuts.csv  4839180_manual_cuts.csv  6233903_manual_cuts.csv  6421188_manual_cuts.csv  6522750_manual_cuts.csv  6762829_manual_cuts.csv  7121885_manual_cuts.csv  7122259_manual_cuts.csv  7670617_manual_cuts.csv  7767733_manual_cuts.csv  8023317_manual_cuts.csv  8415863_manual_cuts.csv  9632895_manual_cuts.csv  9714358_manual_cuts.csv
stanley_cbp/: ExampleBashScript.sh  Stanley_Analysis_InterpN.py  Stanley_Constants.py  Stanley_Detrending.py  Stanley_Functions.py  Stanley_PlanetSearch_InterpN_DebugPadding.py  Stanley_TransitTiming.py  __init__.py
stanley_cbp/Databases/: ANTIC_Catalogue_12_11_filtered.csv  __init__.py  eblm_master_table.csv  villanova_orbit_data_kepler.csv  windemuth_stellar_data.csv
stanley_cbp/Databases/SpecificTargetCuts/: 10198109_manual_cuts.csv  1026032_manual_cuts.csv  12251779_manual_cuts.csv  5473556_manual_cuts.csv  5622250_manual_cuts.csv  6523216_manual_cuts.csv  6672229_manual_cuts.csv  8210721_manual_cuts.csv  8746310_manual_cuts.csv
