[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stanley_cbp"
version = "0.1.48"
description = "Algorithm developed to conduct a systematic search for exoplanets orbiting eclipsing binary stars."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "David Martin",  email = "David.Martin@tufts.edu" },
  { name = "Chanita (Wata) Tubthong", email = "Chanita.Tubthong@tufts.edu" },
  { name = "Tess Kleanthous", email = "Tess.Kleanthous@tufts.edu" }
]

license = { text = "MIT License" }

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["stanley_cbp*"]
exclude = ["LightCurves*", "Databases*", "PlanetSearchOutput*", "scripts_output*"]
