[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stanley"
version = "0.1.52"
description = "Algorithm developed to conduct a systematic search for exoplanets orbiting eclipsing binary stars."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "David Martin",  email = "David.Martin@tufts.edu" },
  { name = "Chanita (Wata) Tubthong", email = "Chanita.Tubthong@tufts.edu" },
  { name = "Tess Kleanthous", email = "Tess.Kleanthous@tufts.edu" }
]

license = { text = "MIT License" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["stanley*"]
exclude = ["LightCurves*", "PlanetSearchOutput*", "scripts_output*"]

[tool.setuptools.package-data]
stanley = [
    "Databases/*",
    "Databases/**/*"
]
